fixed contrast errors

--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -49,7 +49,7 @@ a:hover {
 }
 
 section {
-  padding: 50px 20px;
+  padding: 0px 30px 70px 50px;
   text-align: center;
   background-color: #f5f5f5;
   color: #333;
@@ -88,14 +88,15 @@ footer {
 }
 
 form {
-  background-color: rgb(64, 162, 148);
+  background-color: rgb(178, 203, 199);
   padding: 20px;
-  margin: 20px auto;
-  max-width: 600px;
+  margin: 10px auto;
+  max-width: 500px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: grid;
   gap: 15px;
+  margin-bottom: 20px;
 }
 
 label {
